--- a/hir-analysis/Cargo.toml
+++ b/hir-analysis/Cargo.toml
@@ -17,9 +17,9 @@ cranelift-entity.workspace = true
 cranelift-bforest.workspace = true
 inventory.workspace = true
 intrusive-collections.workspace = true
+hashbrown.workspace = true
 midenc-hir.workspace = true
 midenc-session.workspace = true
-rustc-hash.workspace = true
 smallvec.workspace = true
 thiserror.workspace = true
 
