--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ parking_lot_core = "0.9"
 petgraph = "0.6"
 pretty_assertions = "1.0"
 proptest = "1.4"
-rustc-hash = "1.1"
+rustc-hash = { version = "2.0", default-features = false }
 serde = { version = "1.0.208", features = ["serde_derive", "alloc", "rc"] }
 serde_repr = "0.1.19"
 serde_bytes = "0.11.15"
