--- a/hir-symbol/Cargo.toml
+++ b/hir-symbol/Cargo.toml
@@ -26,5 +26,6 @@ serde = { workspace = true, optional = true }
 
 [build-dependencies]
 Inflector.workspace = true
+hashbrown.workspace = true
 rustc-hash.workspace = true
 toml.workspace = true
