feat: support semver version attributes/management

--- a/hir2/Cargo.toml
+++ b/hir2/Cargo.toml
@@ -13,12 +13,12 @@ edition.workspace = true
 
 [features]
 default = ["std"]
-std = ["rustc-demangle/std", "compact_str/std"]
+std = ["rustc-demangle/std", "compact_str/std", "semver/std"]
 serde = [
-    "dep:serde",
-    "dep:serde_repr",
-    "dep:serde_bytes",
-    "midenc-hir-symbol/serde",
+  "dep:serde",
+  "dep:serde_repr",
+  "dep:serde_bytes",
+  "midenc-hir-symbol/serde",
 ]
 debug_refcell = []
 
@@ -28,8 +28,8 @@ lalrpop = { version = "0.20", default-features = false }
 [dependencies]
 anyhow.workspace = true
 blink-alloc = { version = "0.3", default-features = false, features = [
-    "alloc",
-    "nightly",
+  "alloc",
+  "nightly",
 ] }
 bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
 bitflags.workspace = true
@@ -56,6 +56,7 @@ rustc-demangle = "0.1.19"
 serde = { workspace = true, optional = true }
 serde_repr = { workspace = true, optional = true }
 serde_bytes = { workspace = true, optional = true }
+semver = { version = "1.0", default-features = false }
 smallvec.workspace = true
 thiserror.workspace = true
 typed-arena = "2.0"
