--- a/codegen/masm2/Cargo.toml
+++ b/codegen/masm2/Cargo.toml
@@ -31,7 +31,7 @@ midenc-hir2 = { workspace = true, features = ["serde"] }
 midenc-dialect-hir.workspace = true
 #midenc-hir-analysis.workspace = true
 #midenc-hir-transform.workspace = true
-midenc-session = { workspace = true, features = ["serde"] }
+midenc-session.workspace = true
 paste.workspace = true
 petgraph.workspace = true
 serde.workspace = true
