feature: start core Wasm module translation,
create `midenc-frontend-wasm2` crate,

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "codegen/*",
     "dialects/*",
     "frontend-wasm",
+    "frontend-wasm2",
     "hir",
     "hir2",
     "hir-analysis",
