--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -26,6 +26,7 @@ miden-package.workspace = true
 miden-processor.workspace = true
 miden-stdlib.workspace = true
 midenc-frontend-wasm.workspace = true
+midenc-frontend-wasm2.workspace = true
 midenc-hir.workspace = true
 midenc-hir2.workspace = true
 midenc-hir-transform.workspace = true
