--- a/midenc-compile/Cargo.toml
+++ b/midenc-compile/Cargo.toml
@@ -21,7 +21,7 @@ intrusive-collections.workspace = true
 inventory.workspace = true
 midenc-codegen-masm.workspace = true
 miden-assembly = { workspace = true, features = ["std"] }
-miden-package.workspace = true
+miden-mast-package.workspace = true
 midenc-frontend-wasm.workspace = true
 midenc-hir.workspace = true
 midenc-hir-analysis.workspace = true
