--- a/midenc-session/Cargo.toml
+++ b/midenc-session/Cargo.toml
@@ -23,7 +23,7 @@ inventory.workspace = true
 log.workspace = true
 miden-assembly.workspace = true
 miden-core.workspace = true
-miden-package.workspace = true
+miden-mast-package.workspace = true
 miden-stdlib.workspace = true
 midenc-hir-symbol.workspace = true
 midenc-hir-macros.workspace = true
