--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -5,10 +5,11 @@ on:
     branches:
       - main
       - next
+  pull_request:
 
 jobs:
-  publish_docs:
-    name: publish docs
+  build_docs:
+    name: build docs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
