--- a/codegen/masm2/Cargo.toml
+++ b/codegen/masm2/Cargo.toml
@@ -18,19 +18,16 @@ std = ["bitcode/std", "midenc-hir2/std", "midenc-dialect-hir/std"]
 [dependencies]
 anyhow.workspace = true
 bitcode.workspace = true
-#cranelift-entity.workspace = true
-#intrusive-collections.workspace = true
 inventory.workspace = true
 log.workspace = true
 hashbrown.workspace = true
 miden-assembly.workspace = true
 miden-core.workspace = true
+miden-mast-package.workspace = true
 miden-processor.workspace = true
 miden-stdlib.workspace = true
 midenc-hir2 = { workspace = true, features = ["serde"] }
 midenc-dialect-hir.workspace = true
-#midenc-hir-analysis.workspace = true
-#midenc-hir-transform.workspace = true
 midenc-session.workspace = true
 paste.workspace = true
 petgraph.workspace = true
