--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -31,6 +31,7 @@ midenc-hir.workspace = true
 midenc-hir2.workspace = true
 midenc-hir-transform.workspace = true
 midenc-codegen-masm.workspace = true
+midenc-codegen-masm2.workspace = true
 midenc-session.workspace = true
 midenc-compile.workspace = true
 midenc-debug.workspace = true
