--- a/midenc-debug/Cargo.toml
+++ b/midenc-debug/Cargo.toml
@@ -23,8 +23,9 @@ miden-mast-package.workspace = true
 miden-processor.workspace = true
 miden-stdlib.workspace = true
 midenc-session.workspace = true
-midenc-codegen-masm.workspace = true
-midenc-hir.workspace = true
+midenc-codegen-masm2.workspace = true
+midenc-hir2.workspace = true
+midenc-dialect-hir.workspace = true
 thiserror.workspace = true
 toml.workspace = true
 proptest.workspace = true
