chore: disable compilation of old hir crates, clean up deps

--- a/hir2/Cargo.toml
+++ b/hir2/Cargo.toml
@@ -14,12 +14,7 @@ edition.workspace = true
 [features]
 default = ["std"]
 std = ["rustc-demangle/std", "compact_str/std", "semver/std"]
-serde = [
-    "dep:serde",
-    "dep:serde_repr",
-    "dep:serde_bytes",
-    "midenc-hir-symbol/serde",
-]
+serde = ["dep:serde", "dep:serde_repr", "midenc-hir-symbol/serde"]
 debug_refcell = []
 
 [dependencies]
@@ -44,7 +39,6 @@ rustc-hash.workspace = true
 rustc-demangle = "0.1.19"
 serde = { workspace = true, optional = true }
 serde_repr = { workspace = true, optional = true }
-serde_bytes = { workspace = true, optional = true }
 semver = { version = "1.0", default-features = false }
 smallvec.workspace = true
 thiserror.workspace = true
