feat(ir): provide richer representation of effects

--- a/dialects/hir/Cargo.toml
+++ b/dialects/hir/Cargo.toml
@@ -22,6 +22,7 @@ midenc-hir-symbol.workspace = true
 midenc-session.workspace = true
 paste.workspace = true
 bitvec.workspace = true
+smallvec.workspace = true
 
 [dev-dependencies]
 pretty_assertions = "1.0"
