--- a/sdk/base-macros/Cargo.toml
+++ b/sdk/base-macros/Cargo.toml
@@ -17,6 +17,8 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
+miden-objects = { version = "0.7", default-features = false }
+semver = { version = "1.0", features = ["serde"] }
 
 [dependencies.syn]
 version = "2.0"
