--- a/docs/book.toml
+++ b/docs/book.toml
@@ -3,7 +3,7 @@ authors      = ["Miden contributors"]
 description  = "Manual for the Miden compiler"
 language     = "en"
 multilingual = false
-title        = "The Miden Compiler Guide"
+title        = "The Miden compiler"
 
 [output.html]
 git-repository-url = "https://github.com/0xPolygonMiden/compiler"
