chore: switch to the published version `v0.21` of the `cargo-component`
with type remapping in `wit-bindgen`

--- a/tools/cargo-miden/Cargo.toml
+++ b/tools/cargo-miden/Cargo.toml
@@ -28,9 +28,9 @@ env_logger.workspace = true
 log.workspace = true
 clap.workspace = true
 anyhow.workspace = true
-cargo-component = { version = "0.20.0-dev", git = "https://github.com/greenhat/cargo-component", rev = "093ee4ce75e67814e9ec912faed87160e9a762ca" }
-cargo-component-core = { version = "0.20.0-dev", git = "https://github.com/greenhat/cargo-component", rev = "093ee4ce75e67814e9ec912faed87160e9a762ca" }
-cargo_metadata = "0.18"
+cargo-component = { version = "0.21" }
+cargo-component-core = { version = "0.21" }
+cargo_metadata = "0.19"
 cargo-generate = "0.22"
 semver = "1.0.20"
 parse_arg = "0.1.4"
