--- a/codegen/masm/Cargo.toml
+++ b/codegen/masm/Cargo.toml
@@ -22,8 +22,7 @@ miden-assembly.workspace = true
 miden-core.workspace = true
 miden-mast-package.workspace = true
 miden-processor.workspace = true
-miden-stdlib.workspace = true
-midenc-hir = { workspace = true, features = ["serde"] }
+midenc-hir.workspace = true
 midenc-hir-analysis.workspace = true
 midenc-dialect-arith.workspace = true
 midenc-dialect-cf.workspace = true
