--- a/hir-symbol/Cargo.toml
+++ b/hir-symbol/Cargo.toml
@@ -29,3 +29,6 @@ Inflector.workspace = true
 hashbrown.workspace = true
 rustc-hash.workspace = true
 toml.workspace = true
+
+[package.metadata.cargo-machete]
+ignored = ["Inflector", "hashbrown", "rustc-hash", "toml"]
