--- a/hir-type/Cargo.toml
+++ b/hir-type/Cargo.toml
@@ -19,4 +19,4 @@ serde = ["dep:serde", "dep:serde_repr"]
 miden-formatting.workspace = true
 smallvec.workspace = true
 serde = { workspace = true, optional = true }
-serde_repr = { workspace = true, optional = true }
+serde_repr = { version = "0.1", optional = true }
