--- a/tests/rust-apps-wasm/rust-sdk/cross-ctx-account/Cargo.toml
+++ b/tests/rust-apps-wasm/rust-sdk/cross-ctx-account/Cargo.toml
@@ -46,3 +46,6 @@ package = "miden:cross-ctx-account"
 [package.metadata.component.target.dependencies]
 "miden:base" = { path = "../wit-sdk/miden.wit" }
 "miden:core-import" = { path = "../wit-sdk/miden-core-import.wit" }
+
+[package.metadata.cargo-machete]
+ignored = ["wit-bindgen-rt"]
