fix: missing wasmparser feature causing cargo build failure

--- a/frontend-wasm2/Cargo.toml
+++ b/frontend-wasm2/Cargo.toml
@@ -35,6 +35,7 @@ wasmparser = { version = "0.227", default-features = false, features = [
     "features",
     "component-model",
     "validate",
+    "simd",
 ] }
 
 [dev-dependencies]
