--- a/midenc-compile/Cargo.toml
+++ b/midenc-compile/Cargo.toml
@@ -15,7 +15,15 @@ edition.workspace = true
 
 [features]
 default = ["std"]
-std = ["miden-assembly/std", "midenc-hir/std", "dep:clap"]
+std = [
+    "miden-assembly/std",
+    "midenc-codegen-masm/std",
+    "midenc-frontend-wasm2/std",
+    "midenc-hir/std",
+    "midenc-session/std",
+    "dep:clap",
+    "dep:wat",
+]
 
 [dependencies]
 clap = { workspace = true, optional = true }
@@ -31,4 +39,4 @@ midenc-hir.workspace = true
 midenc-hir-transform.workspace = true
 midenc-session.workspace = true
 thiserror.workspace = true
-wat.workspace = true
+wat = { workspace = true, optional = true }
