--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,14 @@ on:
       - main
       - next
     paths-ignore:
-      - "*.md"
-      - "*.txt"
-      - "docs"
+      - '**.md'
+      - '**.txt'
+      - 'docs/**'
   pull_request:
     paths-ignore:
-      - "*.md"
-      - "*.txt"
-      - "docs"
+      - '**.md'
+      - '**.txt'
+      - 'docs/**'
 
 jobs:
   lint:
