refactor(frontend): rework handling of symbols in frontend
This commit makes a few related changes:

* Refactored the handling of imports/intrinsics to use SymbolPath, with
  the correct hierarchical structure as expected by the Miden assembler.
  The implied module tree of such paths is also correctly declared.
* Refactored CallableFunction to better express the different types of
  callables that are lowered by the frontend.
* Replaced the few remaining uses of FunctionIdent in the frontend with
  SymbolPath. I have not fully evaluated whether the translation is
  strictly correct, however it should match the existing behavior, and
  the tests are passing. We'll want to make sure that we check certain
  assumptions (such that a symbol path provided to a function that
  declares some IR entity using the leaf of that path, is actually being
  declared in a parent entity that corresponds to the prefix of the
  path).
* Replaced the error type used in canonical ABI type flattening to use
  an actual error type to reduce clutter around those diagnostics a bit.
* Replaced some uses of libstd with libcore/liballoc while making other
  changes in those modules.
* Removed the direct dependency on midenc_hir_type in favor of using the
  re-exported APIs from midenc_hir

--- a/frontend/wasm/Cargo.toml
+++ b/frontend/wasm/Cargo.toml
@@ -13,7 +13,7 @@ edition.workspace = true
 
 [features]
 default = ["std"]
-std = ["wasmparser/std", "gimli/std"]
+std = ["wasmparser/std", "gimli/std", "midenc-hir-symbol/std"]
 
 [dependencies]
 anyhow.workspace = true
@@ -28,7 +28,7 @@ midenc-dialect-hir.workspace = true
 midenc-dialect-cf.workspace = true
 midenc-dialect-ub.workspace = true
 midenc-dialect-arith.workspace = true
-midenc-hir-type.workspace = true
+midenc-hir-symbol.workspace = true
 midenc-session.workspace = true
 thiserror.workspace = true
 wasmparser = { version = "0.227", default-features = false, features = [
