--- a/sdk/base-macros/Cargo.toml
+++ b/sdk/base-macros/Cargo.toml
@@ -23,3 +23,7 @@ semver = { version = "1.0", features = ["serde"] }
 [dependencies.syn]
 version = "2.0"
 features = ["full", "parsing", "derive", "extra-traits", "printing"]
+
+[[test]]
+name = "component_macro_test"
+path = "tests/component_macro_test.rs"
