--- a/sdk/base-macros/Cargo.toml
+++ b/sdk/base-macros/Cargo.toml
@@ -17,12 +17,15 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
-miden-objects = { version = "0.7", default-features = false }
+miden-objects = { version = "0.8", default-features = false }
 semver = { version = "1.0", features = ["serde"] }
 
 [dependencies.syn]
 version = "2.0"
 features = ["full", "parsing", "derive", "extra-traits", "printing"]
+
+[dev-dependencies]
+miden-base = { version = "0.0.7", path = "../base" }
 
 [[test]]
 name = "component_macro_test"
