test(codegen): implement initial tests for load_sw/load_dw intrinsics
This commit implements tests for the load_sw and load_dw intrinsics when
performing aligned reads (pretty much always the case currently).

In order to facilitate this, fix bugs I discovered in the process and
improve our testing infrastructure, I've made the following related
changes:

1. Completely reworked how we were handling the encoding/decoding of
   Rust types into their Miden representations. There are a few edge
   cases that come up in testing that were not previously handled by the
   approach we were using, and furthermore, there were actual bugs
   lurking in that implementation that took quite some time to figure
   out due to the interaction between different things
   encoding/decoding/swapping/reversing/etc. The new traits are clearer,
   harder to use incorrectly, and have more tests covering their
   behavior now. As far as I know, these should now be actually correct
   across all the different use cases we test.
2. Factored out some common testing helpers and setup utilities into a
   new `testing` module in `miden-integration-tests`. These can be used
   to author more surgical tests that run against the VM, but do not
   require compiling from Rust to the IR, and largely skip the initial
   stages of compilation (e.g. rewrites). For example, when testing the
   memory intrinsics, we emit a simple function containing a load of a
   pointer passed in as an argument, emit assertions in MASM, and also
   assert behavior against the final execution trace. This avoids a lot
   of overhead for these sorts of tests.

I plan to add more tests in a subsequent PR, but felt like this was a
good start that largely covers the tests we previously had for these
intrinsics.

Next steps:

* Refactor these new tests a bit to share much of their implementation
  (which is virtually identical), and parameterize on the value type,
  and address to load/store against, so that we can generate rand

--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -24,6 +24,8 @@ miden-assembly.workspace = true
 miden-core.workspace = true
 miden-mast-package.workspace = true
 miden-processor.workspace = true
+midenc-dialect-arith.workspace = true
+midenc-dialect-hir.workspace = true
 midenc-frontend-wasm.workspace = true
 midenc-hir.workspace = true
 midenc-hir-eval.workspace = true
