--- a/hir-type/Cargo.toml
+++ b/hir-type/Cargo.toml
@@ -13,10 +13,12 @@ edition.workspace = true
 
 [features]
 default = ["serde"]
-serde = ["dep:serde", "dep:serde_repr"]
+serde = ["dep:serde", "dep:serde_repr", "smallvec/serde"]
 
 [dependencies]
 miden-formatting.workspace = true
+paste.workspace = true
 smallvec.workspace = true
 serde = { workspace = true, optional = true }
 serde_repr = { version = "0.1", optional = true }
+thiserror = { version = "2.0", default-features = false }
