--- a/hir-macros/Cargo.toml
+++ b/hir-macros/Cargo.toml
@@ -19,9 +19,6 @@ proc-macro = true
 [dependencies]
 darling = { version = "0.20", features = ["diagnostics"] }
 Inflector.workspace = true
-proc-macro2 = "1.0"
-quote = "1.0"
-
-[dependencies.syn]
-version = "2.0"
-features = ["full", "parsing", "derive", "extra-traits", "printing"]
+proc-macro2.workspace = true
+quote.workspace = true
+syn.workspace = true
