--- a/sdk/base-macros/Cargo.toml
+++ b/sdk/base-macros/Cargo.toml
@@ -15,14 +15,12 @@ edition.workspace = true
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1.0"
-quote = "1.0"
+proc-macro2.workspace = true
+quote.workspace = true
 miden-objects = { version = "0.8", default-features = false }
-semver = { version = "1.0", features = ["serde"] }
-
-[dependencies.syn]
-version = "2.0"
-features = ["full", "parsing", "derive", "extra-traits", "printing"]
+semver.workspace = true
+toml.workspace = true
+syn.workspace = true
 
 [dev-dependencies]
 miden-base = { version = "0.0.7", path = "../base" }
