--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,15 +100,16 @@ miden-formatting = { version = "0.1", default-features = false }
 # ] }
 # miden-mast-package = { version = "0.13.0", default-features = false }
 
-miden-assembly = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "2239ba1aea7d5984037e791a20e0ced8c9391bd1" }
+# use the VM from the https://github.com/0xPolygonMiden/miden-vm/pull/1731
+miden-assembly = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "13deda4527b25081399ebb98627a35f058b53c2f" }
 miden-core = { version = "0.14.0", default-features = false, features = [
     "diagnostics",
-], git = "https://github.com/0xPolygonMiden/miden-vm", rev = "2239ba1aea7d5984037e791a20e0ced8c9391bd1" }
-miden-processor = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "2239ba1aea7d5984037e791a20e0ced8c9391bd1" }
+], git = "https://github.com/0xPolygonMiden/miden-vm", rev = "13deda4527b25081399ebb98627a35f058b53c2f" }
+miden-processor = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "13deda4527b25081399ebb98627a35f058b53c2f" }
 miden-stdlib = { version = "0.14.0", default-features = false, features = [
     "with-debug-info",
-], git = "https://github.com/0xPolygonMiden/miden-vm", rev = "2239ba1aea7d5984037e791a20e0ced8c9391bd1" }
-miden-mast-package = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "2239ba1aea7d5984037e791a20e0ced8c9391bd1" }
+], git = "https://github.com/0xPolygonMiden/miden-vm", rev = "13deda4527b25081399ebb98627a35f058b53c2f" }
+miden-mast-package = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "13deda4527b25081399ebb98627a35f058b53c2f" }
 
 # This is here for convenience if we need to quickly use a git ref of the VM crates
 #miden-assembly = { version = "0.11.0", git = "https://github.com/0xPolygonMiden/miden-vm", rev = "4d23f948bbf0c8fb7cd7ecba80bb02d37c1724bb" }
